--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ua.velychko.springcourse</groupId>
-  <artifactId>CRUD_App1</artifactId>
+  <artifactId>crud-app</artifactId>
   <packaging>war</packaging>
   <properties>
     <spring.version>6.1.14</spring.version>
   </properties>
   <version>1.0-SNAPSHOT</version>
-  <name>CRUD_App1 Web Application</name>
+  <name>crud-app Web Application</name>
   <url>https://maven.apache.org</url>
 
   <dependencies>
@@ -79,7 +79,7 @@
 
   </dependencies>
   <build>
-    <finalName>CRUD_App1</finalName>
+    <finalName>crud-app</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
